--- a/app/src/main/res/layout/tv_item.xml
+++ b/app/src/main/res/layout/tv_item.xml
@@ -3,6 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/spacing_small"
+    android:layout_marginEnd="@dimen/spacing_small"
+    android:layout_marginTop="@dimen/spacing_tiny"
+    android:layout_marginBottom="@dimen/spacing_tiny"
     app:cardCornerRadius="@dimen/spacing_tiny">
 
     <LinearLayout
