--- a/app/src/main/res/layout/tv_item.xml
+++ b/app/src/main/res/layout/tv_item.xml
@@ -82,6 +82,7 @@
 
                 <ImageView
                     android:layout_width="wrap_content"
+                    android:visibility="gone"
                     android:contentDescription="@string/generic_icon"
                     android:layout_height="wrap_content"
                     android:src="@drawable/heart_outline" />
