--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/navigation_schedule"
-        android:icon="@drawable/clock_outline"
+        android:icon="@drawable/ic_baseline_today_24"
         android:title="@string/title_schedule" />
 
 </menu>
