--- a/app/src/main/res/layout/crew_item.xml
+++ b/app/src/main/res/layout/crew_item.xml
@@ -2,11 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/spacing_small"
-    android:layout_marginTop="@dimen/spacing_tiny"
-    android:layout_marginEnd="@dimen/spacing_small"
-    android:layout_marginBottom="@dimen/spacing_tiny"
-    android:orientation="horizontal">
+    android:gravity="center"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/poster"
@@ -16,10 +13,9 @@
         android:scaleType="centerCrop" />
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_weight="1"
         android:background="@color/white"
         android:gravity="center"
         android:orientation="vertical"
@@ -29,15 +25,17 @@
         <TextView
             android:id="@+id/name"
             android:layout_width="match_parent"
+            android:gravity="center"
             android:layout_height="wrap_content"
             android:fontFamily="@font/bold"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_small" />
 
         <TextView
             android:id="@+id/role"
             android:layout_width="match_parent"
+            android:gravity="center"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/bold"
-            android:textSize="@dimen/font_small" />
+            android:fontFamily="@font/regular"
+            android:textSize="@dimen/font_tiny" />
     </LinearLayout>
 </LinearLayout>
