--- a/app/src/main/res/menu/menu_details.xml
+++ b/app/src/main/res/menu/menu_details.xml
@@ -10,7 +10,7 @@
 
     <item
         android:id="@+id/action_schedule"
-        android:icon="@drawable/ic_baseline_today_24"
+        android:icon="@drawable/calendar_plus"
         android:title="@string/title_schedule"
         app:showAsAction="ifRoom" />
 
