--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -44,6 +44,10 @@
             android:layout_gravity="center_horizontal"
             android:theme="?android:attr/progressBarStyle"
             android:visibility="visible" />
+
+        <include
+            android:id="@+id/empty_container"
+            layout="@layout/empty_list" />
     </RelativeLayout>
 </LinearLayout>
 
